--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script defer src='main.js'></script>
   <title>Document</title>
 </head>
 
 <body>
   <main>
+    <label for='dogBreedSelect'>Select a dog breed</label>
+    <input list='dogBreedsList' id='dogBreedSelect' name='dogBreedSelect' />
+    <datalist id='dogBreedsList'>
 
-
+    </datalist>
   </main>
 
 </body>
