dog images appear for selected breed √

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <main>
     <label for='dogBreedSelect'>Select a dog breed</label>
-    <input list='dogBreedsList' id='dogBreedSelect' name='dogBreedSelect' />
-    <datalist id='dogBreedsList'>
+    <input list='dogBreedsList' id='dogBreedInput' name='dogBreedInput' />
+    <datalist id='dogBreedsList'></datalist>
 
-    </datalist>
+    <div id='thumbnailContainerElement'></div>
   </main>
 
 </body>
