--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src='main.js'></script>
-  <title>Document</title>
+  <link rel='stylesheet' href='style.css'>
+  <title>Dog Images</title>
 </head>
 
 <body>
@@ -15,6 +16,8 @@
     <datalist id='dogBreedsList'></datalist>
 
     <div id='thumbnailContainerElement'></div>
+
+    <div id=paginationElement></div>
   </main>
 
 </body>
