--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
     <div id='thumbnailContainerElement'></div>
 
-    <div id=paginationElement></div>
+    <div id='paginationElement'></div>
+
+    <div id='imageModal'>
+      <img id='imageModalDisplay'>
+    </div>
   </main>
 
 </body>
